# light-ear

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
desktop/: index.html
desktop/src/: main.jsx  styles.css
docs/: manual-smoke-test.md  test-report-audit.md
src/: backend.rs  bilibili.rs  buffer_state.rs  connection_state.rs  core.rs  lib.rs  main.rs  media_cache.rs  music_state.rs  player.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
