[package]
name = "light-ear-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = []
fdk-aac-decoder = ["light-ear/fdk-aac-decoder"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
libp2p = { version = "0.56.0", default-features = false }
light-ear = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1.52.3", features = ["rt", "sync"] }
